Change java version back to 1.7 and change dependencies